# shipmondo-backend-assignment

./: .gitignore  assignment.md  mdsf.json  mise.toml  notes.md
rust-implementation/: .gitignore  Cargo.toml  lint.sh
rust-implementation/migrations/2025-07-01-200359_create_user/: up.sql
rust-implementation/migrations/2025-07-01-222638_create_shipment/: up.sql
rust-implementation/migrations/2025-07-01-224417_create_shipment_package/: down.sql  up.sql
rust-implementation/migrations/2025-07-03-095234_create_user_balances/: down.sql  up.sql
rust-implementation/src/: main.rs  schema.rs
rust-implementation/src/commands/: error.rs  mod.rs
rust-implementation/src/commands/add_user/: error.rs  mod.rs
rust-implementation/src/commands/balance/: mod.rs
rust-implementation/src/commands/create_order/: mod.rs
rust-implementation/src/commands/create_shipment/: mod.rs
rust-implementation/src/commands/remove_user/: error.rs  mod.rs
rust-implementation/src/database/: mod.rs
rust-implementation/src/error/: mod.rs
rust-implementation/src/logging/: mod.rs
rust-implementation/src/models/: mod.rs  shipment_packages.rs  shipments.rs  user.rs  user_balances.rs
rust-implementation/src/shipmondo/: error.rs  mod.rs
