[package]
name = "shipmondo-cli"
version = "0.0.0"
authors = ["Mads Hougesen <mads@mhouge.dk>"]
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.54"
diesel = { version = "2.2.11", features = [
  "returning_clauses_for_sqlite_3_35",
  "sqlite",
] }
inquire = "0.7.5"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
